[package]
name = "stashi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
ring = "0.17.8"
seahorse = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = "0.3.36"
toml = "0.8.19"
