[package]
name = "stashi"
version = "0.1.0"
authors = ["erechorse"]
edition = "2021"
description = "A tool for accumulating Bitcoin using GMO Coin's API."
readme = "README.md"
repository = "https://github.com/erechorse/stashi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
mockito = "1.7.1"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
ring = "0.17.14"
seahorse = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
time = "0.3.44"
toml = "0.9.10"
